--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cordova": "^7.1.0",
     "cordova-android": "^6.3.0",
     "cordova-ios": "^4.5.3",
+    "cordova-plugin-barcodescanner": "^0.7.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-whitelist": "^1.3.2",
     "fs": "0.0.1-security",
@@ -30,8 +31,7 @@
     "vue": "^2.4.3",
     "vue-barcode-scanner": "^0.5.2",
     "weex-html5": "^0.4.1",
-    "weex-vue-render": "^0.12.21",
-    "cordova-plugin-barcodescanner": "^0.7.3"
+    "weex-vue-render": "^0.12.21"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
